# hh-gemini-bot

./: .env.temp  .gitignore  README.md  Readme.md  config.py  create_bot.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
db/: redis_dao.py
services/: gemini.py  hh.py
src/: inline.py  notifications.py  routers.py  states.py
src/handlers/: auth.py  general.py
utils/: cache_util.py  scheduler_util.py
