[project]
name = "hh-gemini-bot"
version = "0.1.0"
description = "Telegram-Bot for quick search vacancies in hh.ru"
authors = [
    {name = "Twopercent",email = "twopercent051@zohomail.eu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (==3.19.0)",
    "aiohappyeyeballs (==2.6.1)",
    "apscheduler (==3.11.0)",
    "betterlogging (==1.0.0)",
    "bs4 (==0.0.2)",
    "httpx (==0.28.1)",
    "pydantic-settings (==2.8.1)",
    "redis (==5.2.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
